...
    checkout: 'checkout',
    connectStripe: 'connect-stripe',
    artworksMedium: 'artworks-medium',
    artworkCategories: 'artwork-categories',
    verifyTransaction: 'verify-transaction',
    gallery: {
        overview: 'Overview',
        artworks: 'Artworks',
        uploadArtwork: 'upload-artwork',
        uploadNewLogo: 'upload-new-gallery-logo',
        orders: 'Orders',
        profile: 'Profile',
        editProfile: 'edit-profile',
        billing: 'billing-plans',
...
